--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  background: #f5f5f5;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 h1 {
   text-align: center;
+}
+
+mat-form-field {
+  display: block;
+  width: 100%;
 }
