minor refactor, added routing for main and register components

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -13,7 +13,7 @@
 
       <div class="login-register-button-group">
         <button mat-raised-button color="primary" type="submit">Zaloguj się</button>
-        <button mat-raised-button color="accent" type="submit">Zarejestruj się</button>
+        <button mat-raised-button color="accent" type="submit" routerLink="/register">Zarejestruj się</button>
       </div>
 
       <mat-error *ngIf="!loginValid">
