Integrated login and register components with backend, added fields validation

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -16,3 +16,9 @@ mat-form-field {
   gap: 10px;
   align-items: center;
 }
+
+.center-error {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
