--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,22 +3,23 @@
     <form #loginForm="ngForm" (ngSubmit)="onSubmit()">
       <mat-form-field appearance="fill">
         <mat-label>Login</mat-label>
-        <input matInput type="text" ngModel name="username" required>
+        <input matInput type="text" [(ngModel)]="username" name="username" required>
       </mat-form-field>
 
       <mat-form-field appearance="fill">
         <mat-label>Hasło</mat-label>
-        <input matInput type="password" ngModel name="password" required>
+        <input matInput type="password" [(ngModel)]="password" name="password" required>
       </mat-form-field>
 
+      <mat-error *ngIf="!loginValid" class="center-error">
+        Nieprawidłowe dane logowania
+      </mat-error>
+
       <div class="login-register-button-group">
-        <button mat-raised-button color="primary" type="submit">Zaloguj się</button>
+        <button mat-raised-button color="primary" type="submit" [disabled]="!loginForm.valid">Zaloguj się</button>
         <button mat-raised-button color="accent" type="submit" routerLink="/register">Zarejestruj się</button>
       </div>
 
-      <mat-error *ngIf="!loginValid">
-        The username and password were not recognized
-      </mat-error>
     </form>
   </mat-card-content>
 </mat-card>
