--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -25,7 +25,7 @@
         </mat-error>
       </mat-form-field>
 
-      <mat-error *ngIf="errorMessage">
+      <mat-error *ngIf="errorMessage" class="center-error">
         {{ errorMessage }}
       </mat-error>
 
