--- a/src/app/components/email-confirmation/email-confirmation.component.css
+++ b/src/app/components/email-confirmation/email-confirmation.component.css
@@ -36,3 +36,11 @@ button {
   justify-content: center;
   align-items: center;
 }
+
+:host {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
