Migrated project to modules

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,4 +1,8 @@
 <mat-card>
-  <app-top-bar></app-top-bar>
+  <app-top-bar>
+    <ngx-mat-select-search>
+
+    </ngx-mat-select-search>
+  </app-top-bar>
 </mat-card>
 
