--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -30,8 +30,8 @@
       </mat-error>
 
       <div class="login-register-button-group">
-        <button mat-raised-button color="primary" type="submit" [disabled]="!registerForm.valid">Zarejestruj się</button>
-        <button mat-raised-button color="accent" type="submit" routerLink="/login">Powrót do strony logowania</button>
+        <button mat-raised-button color="primary" [disabled]="!registerForm.valid">Zarejestruj się</button>
+        <button mat-raised-button color="accent" routerLink="/login">Powrót do strony logowania</button>
       </div>
     </form>
 
