--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
     <form #loginForm="ngForm" (ngSubmit)="onSubmit()">
       <mat-form-field appearance="fill">
         <mat-label>Login</mat-label>
-        <input matInput type="text" [(ngModel)]="username" name="username" required>
+        <input matInput type="text" [(ngModel)]="login" name="username" required>
       </mat-form-field>
 
       <mat-form-field appearance="fill">
@@ -16,8 +16,8 @@
       </mat-error>
 
       <div class="login-register-button-group">
-        <button mat-raised-button color="primary" type="submit" [disabled]="!loginForm.valid">Zaloguj się</button>
-        <button mat-raised-button color="accent" type="submit" routerLink="/register">Zarejestruj się</button>
+        <button mat-raised-button color="primary" [disabled]="!loginForm.valid" type="submit">Zaloguj się</button>
+        <button mat-raised-button color="accent" routerLink="/register" type="submit">Zarejestruj się</button>
       </div>
 
     </form>
