Finished up cleanup

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,8 +1,4 @@
 <mat-card>
-  <app-top-bar>
-    <ngx-mat-select-search>
-
-    </ngx-mat-select-search>
-  </app-top-bar>
+  <app-top-bar></app-top-bar>
 </mat-card>
 
