--- a/src/app/components/top-bar/top-bar.component.css
+++ b/src/app/components/top-bar/top-bar.component.css
@@ -6,21 +6,6 @@ mat-card {
   height: 12vh;
   background-color: red;
 }
-
-.search-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.search-bar {
-  width: 30%;
-}
-
-mat-form-field {
-  overflow: hidden;
-}
-
-mat-form-field input.matInput {
-  border-radius: 0 0 10px 10px;
+.search-bar-main {
+  width: 30vw; /* vw stands for viewport width */
 }
