--- a/src/app/components/top-bar/top-bar.component.html
+++ b/src/app/components/top-bar/top-bar.component.html
@@ -9,7 +9,10 @@
 
   <mat-autocomplete #auto="matAutocomplete">
     <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-      {{option}}
+      <div class="book-option">
+        <span>{{option}}</span>
+        <img *ngIf="getCoverUrl(option) | async as url" [src]="url" alt="Book cover" class="book-cover">
+        <button mat-button color="primary" class="details-button">Przejdź do szczegółów</button>      </div>
     </mat-option>
   </mat-autocomplete>
 </mat-card>
