Added displaying of five recently added authors to the main component

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -12,8 +12,29 @@
 
 <div class="book-list">
   <mat-card *ngFor="let book of books" class="book-card">
-    <img *ngIf="getCoverUrl(book.isbn) | async as url" [src]="url" alt="Book cover" class="book-cover">
+    <img *ngIf="getBookCoverUrl(book.isbn) | async as url" [src]="url" alt="Book cover" class="book-cover">
     <mat-card-title>{{book.title}}</mat-card-title>
     <button mat-raised-button color="primary" (click)="navigateToBookDetails(book.isbn)">Wyświetl szczegóły</button>
   </mat-card>
+</div>
+
+<div class="center-text">
+  <button mat-raised-button color="primary">Wyświetl wszystkie książki</button>
+</div>
+
+
+<div class="center-text">
+  <h1>Ostatnio dodani autorzy:</h1>
+</div>
+
+<div class="author-list">
+  <mat-card *ngFor="let author of authors" class="author-card">
+    <img *ngIf="getAuthorPictureUrl(author.authorId) | async as url" [src]="url" alt="Author">
+    <mat-card-title>{{author.name}}</mat-card-title>
+    <button mat-raised-button color="primary">Wyświetl szczegóły</button>
+  </mat-card>
+</div>
+
+<div class="center-text">
+  <button mat-raised-button color="primary">Wyświetl wszystkich autorów</button>
 </div>
