--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -11,6 +11,14 @@
   margin: auto;
 }
 
+.author-list{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  width: 95%;
+  margin: auto;
+}
+
 .book-card {
   width: 230px;
   margin: 10px;
@@ -30,4 +38,20 @@
 .book-cover {
   width: 100%;
   height: auto;
+}
+
+.author-card {
+  width: 230px;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.author-card .mat-card-title {
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
