--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -30,7 +30,7 @@
 <div class="author-list">
   <mat-card *ngFor="let author of authors" class="author-card">
     <img *ngIf="getAuthorPictureUrl(author.authorId) | async as url" [src]="url" alt="Author">
-    <mat-card-title>{{author.name}}</mat-card-title>
+    <mat-card-title>{{author.name}} {{author.surname}}</mat-card-title>
     <button mat-raised-button color="primary">Wyświetl szczegóły</button>
   </mat-card>
 </div>
