Added basic all-books component [WIP]

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -19,9 +19,8 @@
 </div>
 
 <div class="center-text">
-  <button mat-raised-button color="primary">Wyświetl wszystkie książki</button>
+  <button mat-raised-button color="primary" routerLink="/books">Wyświetl wszystkie książki</button>
 </div>
-
 
 <div class="center-text">
   <h1>Ostatnio dodani autorzy:</h1>
