--- a/src/app/components/all-books/all-books.component.css
+++ b/src/app/components/all-books/all-books.component.css
@@ -1,8 +1,50 @@
+.container {
+  display: flex;
+  justify-content: flex-start;
+  padding: 20px;
+}
+
+.filter-panel {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin-right: 20px;
+  width: 13%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  align-self: flex-start;
+}
+
+.filter-panel h2 {
+  margin-bottom: 10px;
+  text-align: center;
+  font-size: 20px;
+  color: #333;
+}
+
+.filter-panel mat-checkbox {
+  margin-bottom: 10px; /* zmniejszony margines */
+}
+
+.filter-panel p {
+  margin-bottom: 5px; /* zmniejszony margines */
+  font-size: 16px;
+  color: #333;
+}
+
+mat-slider {
+  width: 100%;
+  margin-bottom: 10px; /* zmniejszony margines */
+}
+
 .book-list {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
   flex-wrap: wrap;
-  width: 95%;
+  width: 100%;
   margin: auto;
 }
 
@@ -25,4 +67,14 @@
 .book-cover {
   width: 100%;
   height: auto;
+}
+
+.search-bar {
+  display: flex;
+  justify-content: center;
+  margin: 40px 0 20px 0;
+}
+
+.search-field {
+  width: 50%;
 }
