--- a/src/app/components/all-books/all-books.component.css
+++ b/src/app/components/all-books/all-books.component.css
@@ -78,3 +78,10 @@ mat-slider {
 .search-field {
   width: 50%;
 }
+
+.close-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
