--- a/src/app/components/user-panel/user-panel.component.css
+++ b/src/app/components/user-panel/user-panel.component.css
@@ -1,40 +1,41 @@
 .user-info {
-  width: 50%; /* Adjust the width as needed */
+
+  width: 50%;
   padding: 20px;
   box-sizing: border-box;
-  background-color: #f0f0f0; /* Change the color as needed */
-  margin: 50px auto 0; /* 50px top margin, auto left and right, 0 bottom */
+  background-color: #f0f0f0;
+  margin: 50px auto 0;
   color: #333;
-  border-radius: 10px; /* Add rounded corners */
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Add a subtle shadow */
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   position: relative;
   text-align: center;
 }
 
 .user-info h2 {
   margin-bottom: 20px;
-  font-size: 24px; /* Increase the font size */
+  font-size: 24px;
   color: #333;
   text-align: center;
 }
 
 .close-button{
-  position: absolute; /* Add this line */
-  top: 0; /* Add this line */
+  position: absolute;
+  top: 0;
   right: 0;
 }
 
 .user-books-message,
 .user-authors,
 .user-reviews {
-  width: 80%; /* Adjust the width as needed */
-  margin: 20px auto; /* Center the sections */
+  width: 80%;
+  margin: 20px auto;
 }
 
 .user-books-message h2,
 .user-authors h2,
 .user-reviews h2 {
-  text-align: center; /* Center the titles */
+  text-align: center;
 }
 
 .password-change {
@@ -114,3 +115,6 @@
   justify-content: center;
 }
 
+body {
+  background: linear-gradient(to right, #d3d3d3, #a9a9a9);
+}
