--- a/src/app/components/user-panel/user-panel.component.html
+++ b/src/app/components/user-panel/user-panel.component.html
@@ -61,7 +61,7 @@
   </mat-card>
 </div>
 
-<h2>Twoje recenzje</h2>
+<h2 class="your-reviews-header">Twoje recenzje</h2>
 
 <div class="user-reviews">
 
