--- a/src/app/components/all-books/all-books.component.css
+++ b/src/app/components/all-books/all-books.component.css
@@ -26,18 +26,18 @@
 }
 
 .filter-panel mat-checkbox {
-  margin-bottom: 10px; /* zmniejszony margines */
+  margin-bottom: 10px;
 }
 
 .filter-panel p {
-  margin-bottom: 5px; /* zmniejszony margines */
+  margin-bottom: 5px;
   font-size: 16px;
   color: #333;
 }
 
 mat-slider {
   width: 100%;
-  margin-bottom: 10px; /* zmniejszony margines */
+  margin-bottom: 10px;
 }
 
 .book-list {
@@ -84,4 +84,12 @@ mat-slider {
   top: 10px;
   right: 10px;
   cursor: pointer;
+}
+
+.add-book-button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
