Created add book form component

--- a/src/app/components/add-object-form/add-book-form-component.css
+++ b/src/app/components/add-object-form/add-book-form-component.css
@@ -31,3 +31,7 @@ mat-form-field {
   right: 10px;
   cursor: pointer;
 }
+
+.uploaded-file {
+  margin: 10px 0;  /* Dostosuj wartości według potrzeb */
+}
