Added all-authors component

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -47,5 +47,5 @@
 </div>
 
 <div class="center-text">
-  <button mat-raised-button color="primary">Wyświetl wszystkich autorów</button>
+  <button mat-raised-button color="primary" routerLink="/all-authors">Wyświetl wszystkich autorów</button>
 </div>
