--- a/src/app/components/all-books/all-books.component.html
+++ b/src/app/components/all-books/all-books.component.html
@@ -25,5 +25,5 @@
 </div>
 
 <div class="add-book-button-container">
-  <button mat-raised-button color="primary" class="add-book-button" routerLink="/add-object-form">Dodaj nową książkę</button>
+  <button mat-raised-button color="primary" class="add-book-button" routerLink="/add-book-form">Dodaj nową książkę</button>
 </div>
