--- a/src/app/components/add-book-form/add-book-form-component.css
+++ b/src/app/components/add-book-form/add-book-form-component.css
@@ -9,7 +9,7 @@ form {
   margin-left: auto;
   margin-right: auto;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
-  position: relative; /* Dodajemy pozycję relative do formularza */
+  position: relative;
 }
 
 mat-form-field {
@@ -33,5 +33,5 @@ mat-form-field {
 }
 
 .uploaded-file {
-  margin: 10px 0;  /* Dostosuj wartości według potrzeb */
+  margin: 10px 0;
 }
