--- a/src/app/components/user-panel/user-panel.component.html
+++ b/src/app/components/user-panel/user-panel.component.html
@@ -64,7 +64,8 @@
 <div class="user-reviews">
 
   <div *ngFor="let review of reviews" class="review-card">
-    <h3 class="review-title">{{review.title}}</h3>
+    <h3 class="review-title">Recenzja książki: {{review.title}}</h3>
+    <mat-card-title class="centered-title">{{getBookNameByBookId(review.bookId!) | async}}</mat-card-title>
     <p class="review-excerpt">{{review.content}}</p>
     <div class="button-container-review">
       <button mat-raised-button color="primary" class="read-more-button">Czytaj dalej</button>
