--- a/src/app/components/user-panel/user-panel.component.css
+++ b/src/app/components/user-panel/user-panel.component.css
@@ -143,6 +143,9 @@ body {
   padding: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h2 {
@@ -150,17 +153,9 @@ h2 {
 }
 
 .edit-button {
-  text-align: center;
-  display: block;
-  margin: auto;
-  width: 30%;
-  margin-left: -50px;
-
-}
-
-.button-container-review {
-  display: flex;
-  justify-content: space-around;
+  margin-top: auto;
+  margin-bottom: 10px;
+  width: 100%;
 }
 
 .your-reviews-header {
