--- a/src/app/components/user-panel/user-panel.component.html
+++ b/src/app/components/user-panel/user-panel.component.html
@@ -62,17 +62,12 @@
 <h2 class="your-reviews-header">Twoje recenzje</h2>
 
 <div class="user-reviews">
-
   <div *ngFor="let review of reviews" class="review-card">
     <h3 class="review-title">Recenzja książki: {{review.title}}</h3>
     <mat-card-title class="centered-title">{{getBookNameByBookId(review.bookId!) | async}}</mat-card-title>
     <p class="review-excerpt">{{review.content}}</p>
     <div class="button-container-review">
-      <button mat-raised-button color="primary" class="read-more-button">Czytaj dalej</button>
-      <button mat-raised-button color="primary" class="edit-button">Edytuj</button>
+      <button mat-button class="edit-button" [routerLink]="['/add-review-form', review.reviewId]" [ngStyle]="{'background-color': '#3f51b5', 'color': 'white'}">Edytuj</button>
     </div>
   </div>
-
 </div>
-
-
